--- a/impl/src/main/res/values/ids.xml
+++ b/impl/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="tag_item_view_helper" type="id"/>
+    <item name="tag_view_holder_impl" type="id"/>
+    <item name="tag_view_protocol" type="id"/>
 </resources>
